update variables, rename footer, add nav menu syling, fix vertical align of jumbotron

--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -222,20 +222,20 @@
  //## Dropdown menu container and contents.
 
  //** Background for the dropdown menu.
- $dropdown-bg:                    #fff !default;
+ $dropdown-bg:                    darken(#f8f8f8, 6.5%) !default;
  //** Dropdown menu `border-color`.
- $dropdown-border:                rgba(0,0,0,.15) !default;
+ $dropdown-border:                $dropdown-bg;
  //** Dropdown menu `border-color` **for IE8**.
- $dropdown-fallback-border:       #ccc !default;
+ $dropdown-fallback-border:       $dropdown-bg !default;
  //** Divider color for between dropdown items.
  $dropdown-divider-bg:            #e5e5e5 !default;
 
  //** Dropdown link text color.
- $dropdown-link-color:            $gray-dark !default;
+ $dropdown-link-color:            $brand-primary !default;
  //** Hover color for dropdown links.
- $dropdown-link-hover-color:      darken($gray-dark, 5%) !default;
+ $dropdown-link-hover-color:      $body-bg;
  //** Hover background for dropdown links.
- $dropdown-link-hover-bg:         #f5f5f5 !default;
+ $dropdown-link-hover-bg:         $brand-primary;
 
  //** Active dropdown menu item text color.
  $dropdown-link-active-color:     $component-active-color !default;
@@ -359,10 +359,10 @@
  $navbar-default-border:            darken($navbar-default-bg, 6.5%) !default;
 
  // Navbar links
- $navbar-default-link-color:                #777 !default;
- $navbar-default-link-hover-color:          #333 !default;
+ $navbar-default-link-color:                $gray-dark !default;
+ $navbar-default-link-hover-color:          $brand-primary;
  $navbar-default-link-hover-bg:             transparent !default;
- $navbar-default-link-active-color:         #555 !default;
+ $navbar-default-link-active-color:         $brand-primary;
  $navbar-default-link-active-bg:            darken($navbar-default-bg, 6.5%) !default;
  $navbar-default-link-disabled-color:       #ccc !default;
  $navbar-default-link-disabled-bg:          transparent !default;
