--- a/sass/components/_misc.scss
+++ b/sass/components/_misc.scss
@@ -18,7 +18,6 @@ img {
 }
 
 a {
-	@include transition(all 0.2s ease-in-out);
 	&:hover {
 		text-decoration: none;
 	}
