--- a/sass/components/_navbar.scss
+++ b/sass/components/_navbar.scss
@@ -12,6 +12,36 @@ $navbar-height-md: ($navbar-height * 2);
 		box-shadow: inset 0 1px 2px 0 rgba(0,0,0,0.4);
 	}
 }
+.nav-collapse {
+	@include transform(translate(-50%, -50%));
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	font-size: 1.3em;
+	font-weight: 700;
+
+	.navbar-nav {
+		> li {
+			> a {
+				width: 180px;
+				text-align: center;
+				@include transition(color 0.2s ease-in-out);
+			}
+		}
+	}
+	.dropdown-menu {
+		width: 100%;
+		@include box-shadow(none);
+		border-radius: 0;
+		
+		> li {
+			> a {
+				font-weight: 700;
+			}
+		}
+	}
+}
+
 .navbar-brand {
 	padding: 5px 15px;
 	float: right;
